# msgr

./: README.md  database.db  examples.py  index.html  main.py  pyproject.toml  server_start.bat  tutorial.db
api/: messages.py  users.py
crudes/: users.py
database/: config.py  db_connect.py  db_models  models.py  session.py  tables.py
database/models/: users.py
schemas/: chats.py  messages.py  users.py
server/: db.py  main.py
settings/: config.py
static/: index.html
static/login/: script.js  style.css  template.html
tests/: tests.py
