[tool.poetry]
name = "msgr"
version = "0.1.0"
description = "Simple websocket messenger"
authors = ["bzhidlo <zhukovaaa98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87.0"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
