[tool.poetry]
name = "msgr"
version = "0.1.0"
description = "Simple websocket messenger"
authors = ["bzhidlo <zhukovaaa98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87.0"
websockets = "^10.4"
uvicorn = "^0.20.0"
cx-oracle = "^8.3.0"
sqlalchemy = "^1.4.44"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
